syntax = "proto3";

import "google/protobuf/any.proto";

package ui;

message UiSnapshot {
    string type_desc = 1;
    optional google.protobuf.Any data = 2;
}