syntax = "proto3";

import "google/protobuf/any.proto";

package host_client;

// Origin: Client
// Target: Host
message ClientMessage {
    google.protobuf.Any game_input_message = 1;
}

// Origin: Host
// Target: Client
message HostMessage {
    google.protobuf.Any game_output_message = 1;
}